blog post with banner

--- a/_posts/2018-02-21-docker-+-go.markdown
+++ b/_posts/2018-02-21-docker-+-go.markdown
@@ -6,7 +6,7 @@ categories: Nathan
 subclass: 'post tag-2018'
 tags:
   - 2018
-cover: 'assets/images/banner.png'
+cover: 'assets/images/docker_go.png'
 ---
 
 # Starting with a great article
