--- a/_posts/2018-02-21-docker-+-go.markdown
+++ b/_posts/2018-02-21-docker-+-go.markdown
@@ -9,7 +9,7 @@ tags:
 cover: 'assets/images/docker_go.png'
 ---
 
-# Starting with a great article
+### Starting with a great guide
 
 As someone who loves go, and uses docker as their primary build mechanism,
 Pierre's article [The Go Dockerfile](https://medium.com/@pierreprinetti/the-go-dockerfile-d5d43af9ee3c) was very appealing to me.
